<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_easy_open_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.noassembyrequired.EasyOpenContainer">

    <Button
        android:text="@string/return_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnHome4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/easy_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:id="@+id/textView17"
        android:textSize="36sp"
        android:textAlignment="center"
        android:layout_above="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/lightsab"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textView17" />

    <TextView
        android:text="@string/normal_hammer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView19"
        android:layout_marginTop="27dp"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignRight="@+id/textView12"
        android:layout_alignEnd="@+id/textView12" />

    <TextView
        android:text="@string/gun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textView19"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/lightsaber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView15"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

    <TextView
        android:text="@string/knife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
