<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.noassembyrequired.MainActivity">

    <Button
        android:text="@string/dresser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDresser"
        android:layout_below="@+id/txtAssemble"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <Button
        android:text="@string/patio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPatio"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/btnBicycle"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/Bike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBicycle"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/btnDresser"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/add_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:textSize="23sp"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/btnPatio"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/easy_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEasyOpen"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView23"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/assemble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/txtAssemble"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
